--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,9 @@ python-editor = "==1.0.4"
 greenlet = "==1.1.0"
 Mako = "==1.1.4"
 boto3 = "*"
+flask-socketio = "*"
+gevent-websocket = "*"
+eventlet = "*"
 
 [dev-packages]
 
