--- a/Pipfile
+++ b/Pipfile
@@ -28,7 +28,7 @@ Mako = "==1.1.4"
 boto3 = "*"
 flask-socketio = "*"
 gevent-websocket = "*"
-eventlet = "*"
+eventlet = "==0.30.2"
 
 [dev-packages]
 
