--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,54 @@
-name: Build and deploy Python app to Azure Web App
-
+name: Deploy
 on:
   push:
     branches:
       - main
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-
+  BuildAndDeploy:
+    runs-on: ubuntu-20.04
     steps:
-    - name: 'Checkout GitHub Action'
-      uses: actions/checkout@master
+    - uses: actions/checkout@v3
+    # https://github.com/actions/setup-node
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+        cache: 'npm'
+        cache-dependency-path: react-app/package-lock.json
+    - name: Build React App
+      working-directory: react-app
+      # CI=false allows the build to ignore any warnings when building
+      run: npm install && CI=false npm run build
 
-    - name: Set up Python version
-      uses: actions/setup-python@v1
+    # https://github.com/actions/setup-python
+    # If a student sees this, they could speed up their builds
+    # by moving install from docker to cached GH action runner
+    # Have fun (after you have a passing project!) :)
+    - uses: actions/setup-python@v3
       with:
         python-version: '3.9'
+        cache: 'pip'
+    - run: pip install pipenv
 
-    - name: 'Install requirements'
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+    - name: Update requirements.txt for container install
+      run: pipenv requirements > requirements.txt
 
-    - name: 'Login via Azure CLI'
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Login to Heroku Container registry
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: heroku container:login
 
-    - name: 'Deploy to Azure WebApp'
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'Your-Web-App-Name'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: .
+    - name: Build Container and push
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
+
+    - name: Release
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
+
+    - name: Run DB Migration
+      env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: heroku run -a ${{ secrets.HEROKU_APP_NAME }} flask db upgrade
